shaku_derive/tests/ui/provide_non_box.stderr
error: Error in dependency: Found non-Box type annotated with #[shaku(provide)]
  --> $DIR/provide_non_box.rs:14:10
   |
14 | #[derive(Provider)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
